# PYZ1

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.omo/drafts/: pyz1-cleanroom-reproduction.md
.omo/evidence/: final-gate-pyz1-benchmark-04-parity.txt  final-gate-pyz1-cli-20260704.txt  final-gate-pyz1-estimators-20260704.txt  final-gate-pyz1-oracle-corpus-20260703.txt  final-gate-pyz1-output-writer-20260703.txt  final-gate-pyz1-summary-20260704.txt  final-gate-pyz1-values-initconfig-20260703.txt  pre-git-init-gate-20260704.txt  pyz1-benchmark-04-oracle-and-parity.md  pyz1-env-setup.txt  pyz1-oracle-corpus-20260703.md  pyz1-output-writer-20260703.md  task-1-pyz1-cleanroom-reproduction.txt  task-16-pyz1-cleanroom-reproduction.txt  task-2-4-pyz1-cleanroom-reproduction.txt  task-2-4-red-pyz1-cleanroom-reproduction.txt  task-3-pyz1-cleanroom-reproduction.txt  task-5-overflow-corpus-parse-pyz1-cleanroom-reproduction.txt  task-5-overflow-quality-pyz1-cleanroom-reproduction.txt  task-5-overflow-red-pyz1-cleanroom-reproduction.txt  task-5-quality-pyz1-cleanroom-reproduction.txt  task-5-red-pyz1-cleanroom-reproduction.txt  (+25 more)
docs/: completion-audit.md  evidence-ledger.md  pyz1-contract.md  reducer-oracle-geometry-audit.md  source-informed-development-plan.md
src/pyz1/: __main__.py  (+45 more)
tests/: test_benchmark_input_cli.py  test_benchmark_inputs.py  test_cli_scaffold.py  test_corpus_smoke.py  test_corpus_smoke_cli.py  test_estimators.py  test_geometry.py  test_initconfig_io.py  test_lammps_dump_import.py  test_lammps_import.py  test_models.py  test_oracle.py  test_oracle_install.py  test_output_io.py  test_output_values.py  test_package_integration_smoke.py  test_package_metadata.py  test_ppa.py  test_ppa_oracle_coordinates.py  test_ppa_oracle_coordinates_cli.py  test_ppa_regression.py  test_ppa_regression_cli.py  test_reference_log_cli.py  test_reference_logs.py  test_regression_cli.py  test_spplus_regression.py  test_summary.py  test_z1_io.py  test_z1_log.py  test_z1_reducer.py  test_z1plus_parity.py
(+548 files in other folders)
