[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyz1"
version = "0.1.0"
description = "Clean-room Python reproduction of the public Z1+ workflow."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "rich>=13.0",
    "typing-extensions>=4.12",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.21",
    "pytest>=8",
    "ruff>=0.8",
]

[project.scripts]
pyz1 = "pyz1.cli:app"
pyz1-ppa-oracle-coordinates = "pyz1.ppa_oracle_coordinates_cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.11"
pythonPlatform = "All"
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]
reportUnusedCallResult = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedVariable = "error"
reportMissingParameterType = "error"
reportPrivateUsage = "error"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "CPY001",
    "D100",
    "D101",
    "D102",
    "D104",
    "D105",
    "D103",
    "D203",
    "D213",
    "FBT001",
    "FBT002",
    "FIX002",
    "ISC001",
    "TD002",
    "TD003",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",
    "D",
    "PLR2004",
    "S101",
    "SLF001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "typer.Argument",
    "typer.Option",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = ["error"]
